--- a/css/global.css
+++ b/css/global.css
@@ -43,7 +43,9 @@ h6 {
   font-weight: 700;
   letter-spacing: -0.03em;
 }
-
+button:disabled {
+  background-color: gray;
+}
 p {
   margin-bottom: 10px;
   color: #546285;
@@ -559,7 +561,6 @@ button {
   display: none;
   cursor: pointer;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
