--- a/css/global.css
+++ b/css/global.css
@@ -53,7 +53,18 @@ p {
   line-height: 1.5;
   letter-spacing: -0.02em;
 }
-
+#selectCalificador {
+ width: 60px;
+ height: 40px;
+ margin: 30px;
+}
+#reservasConfirmadas {
+  width: 70%;
+  margin: 30px auto;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
 .nav-link {
   padding-right: 16px;
   padding-left: 16px;
